fix: bubbles behind container

--- a/src/assets/css/Dihia.module.css
+++ b/src/assets/css/Dihia.module.css
@@ -26,6 +26,7 @@
     padding-left: 5rem;
     border-radius: 20px;
     padding-bottom: 2rem;
+    z-index: 2;
   }
   
   .ul {
@@ -77,7 +78,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: -1;
+    z-index: 1;
   }
   
   /* KEYFRAMES */
